# sccarlinpy

./: README.md  pyproject.toml
R/: scar_R_integration.R
notebook/: 1_Merge_scars.ipynb  3_Export.ipynb
sccarlinpy/: __init__.py  align.py  demux.py  fastq_sc_scar_aggregate.py  scar_functions.py
workflow/: Snakefile  config.json
